--- a/index.html
+++ b/index.html
@@ -12,17 +12,26 @@
             rel="stylesheet"
         />
     </head>
-    <body>
-        <header>
-            <div>
-                <img src="https://skillcrafttech.com/images/logo-light.svg" alt="Logo" />
-            </div>
-            <div>
+    <body class="flex-column">
+        <video src="https://www.pexels.com/download/video/9145177/" autoplay muted loop></video>
+        <header class="flex-row">
+            <div class="flex-row">
                 <a href="">Home</a>
                 <a href="">Apply</a>
                 <a href="">About Us</a>
                 <a href="">Contact</a>
             </div>
         </header>
+        <main class="flex-column">
+            <div id="hero">
+                <h1>Crafting Success<br />through SkillCraft Technology</h1>
+                <p>
+                    At SkillCraft Technology, we believe in the power of skills to shape futures. We are not just a company; we are craftsmen of talent, architects of opportunity,
+                    and builders of tomorrow. Through our comprehensive suite of services, we empower students to hone their skills, secure valuable internships, and embark on
+                    fulfilling career journeys.
+                </p>
+                <button>Apply</button>
+            </div>
+        </main>
     </body>
 </html>
