Changed Navbar Style

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                 </p>
                 <button>Apply</button>
             </div>
+            <div id="chooseUs" class="flex-row">
+                <h1>Why Choose Us?</h1>
+                <div id="collage"></div>
+            </div>
         </main>
     </body>
 </html>
