Added New Section

--- a/index.html
+++ b/index.html
@@ -33,8 +33,22 @@
                 <button>Apply</button>
             </div>
             <div id="chooseUs" class="flex-row">
-                <h1>Why Choose Us?</h1>
-                <div id="collage"></div>
+                <div id="collage" class="flex-row">
+                    <img src="https://images.pexels.com/photos/4144230/pexels-photo-4144230.jpeg" alt="image1" id="bigImage" />
+                    <div class="flex-column">
+                        <img src="https://images.pexels.com/photos/1181244/pexels-photo-1181244.jpeg" alt="image2" id="smallImage1" />
+                        <img src="https://images.pexels.com/photos/4145355/pexels-photo-4145355.jpeg" alt="image3" id="smallImage2" />
+                    </div>
+                </div>
+                <div class="flex-column" id="chooseUsTextArea">
+                    <h1>Why Choose Us?</h1>
+                    <h2>We provide industry designed internship programs</h2>
+                </div>
+            </div>
+            <div id="internships" class="flex-column">
+                <div class="internshipCardsHolder flex-row">\
+                    <div class="internshipCards flex-column"></div>
+                </div>
             </div>
         </main>
     </body>
