Added New Section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </header>
         <main class="flex-column">
-            <div id="hero">
+            <div id="hero" class="sections">
                 <h1>Crafting Success<br />through SkillCraft Technology</h1>
                 <p>
                     At SkillCraft Technology, we believe in the power of skills to shape futures. We are not just a company; we are craftsmen of talent, architects of opportunity,
@@ -32,7 +32,7 @@
                 </p>
                 <button>Apply</button>
             </div>
-            <div id="chooseUs" class="flex-row">
+            <div id="chooseUs" class="flex-row sections">
                 <div id="collage" class="flex-row">
                     <img src="https://images.pexels.com/photos/4144230/pexels-photo-4144230.jpeg" alt="image1" id="bigImage" />
                     <div class="flex-column">
@@ -41,14 +41,107 @@
                     </div>
                 </div>
                 <div class="flex-column" id="chooseUsTextArea">
-                    <h1>Why Choose Us?</h1>
+                    <h1 class="sectionTitle">Why Choose Us?</h1>
                     <h2>We provide industry designed internship programs</h2>
                 </div>
             </div>
-            <div id="internships" class="flex-column">
-                <div class="internshipCardsHolder flex-row">\
-                    <div class="internshipCards flex-column"></div>
+            <div id="internships" class="flex-column sections">
+                <h1 class="sectionTitle">What we offer</h1>
+                <div id="internshipCardsHolder" class="flex-row">
+                    <div class="internshipCards flex-column">
+                        <h1>Software Development</h1>
+                        <ul>
+                            <li>SWE Lifecycle</li>
+                            <li>CLI Apps</li>
+                            <li>GUI Apps</li>
+                            <li>Web Scraping</li>
+                        </ul>
+                        <a href="https://skillcrafttech.com/register" class="applyButton">Apply</a>
+                    </div>
+                    <div class="internshipCards flex-column">
+                        <h1>Web Development</h1>
+                        <ul>
+                            <li>HTML/CSS</li>
+                            <li>Javascript & Frameworks</li>
+                            <li>Responsive Website</li>
+                            <li>Web Apps</li>
+                        </ul>
+                        <a href="https://skillcrafttech.com/register" class="applyButton">Apply</a>
+                    </div>
+                    <div class="internshipCards flex-column">
+                        <h1>App Development</h1>
+                        <ul>
+                            <li>Kotlin/Swift/Flutter/React Native</li>
+                            <li>Simple Apps</li>
+                            <li>Advanced Apps</li>
+                            <li>Cloud Apps</li>
+                        </ul>
+                        <a href="https://skillcrafttech.com/register" class="applyButton">Apply</a>
+                    </div>
+                    <div class="internshipCards flex-column">
+                        <h1>Machine Learning</h1>
+                        <ul>
+                            <li>Data Analysis</li>
+                            <li>Supervised Learning</li>
+                            <li>Unsupervised Learning</li>
+                            <li>Deep Learning</li>
+                        </ul>
+                        <a href="https://skillcrafttech.com/register" class="applyButton">Apply</a>
+                    </div>
+                    <div class="internshipCards flex-column">
+                        <h1>Data Science</h1>
+                        <ul>
+                            <li>EDA</li>
+                            <li>Data Preprocessing</li>
+                            <li>Data Visualization</li>
+                            <li>BI Tools</li>
+                        </ul>
+                        <a href="https://skillcrafttech.com/register" class="applyButton">Apply</a>
+                    </div>
+                    <div class="internshipCards flex-column">
+                        <h1>Cyber Security</h1>
+                        <ul>
+                            <li>Encyption</li>
+                            <li>Obfuscation</li>
+                            <li>Logging</li>
+                            <li>Security Analysis</li>
+                        </ul>
+                        <a href="https://skillcrafttech.com/register" class="applyButton">Apply</a>
+                    </div>
+                    <div class="internshipCards flex-column">
+                        <h1>Graphics Design</h1>
+                        <ul>
+                            <li>Posters</li>
+                            <li>Logo</li>
+                            <li>Business Card</li>
+                            <li>Magazine Covers</li>
+                        </ul>
+                        <a href="https://skillcrafttech.com/register" class="applyButton">Apply</a>
+                    </div>
+                    <div class="internshipCards flex-column">
+                        <h1>UI/UX</h1>
+                        <ul>
+                            <li>Modern Homepagen</li>
+                            <li>Dark Mode</li>
+                            <li>Checkout Flow</li>
+                            <li>User Journey Map</li>
+                        </ul>
+                        <a href="https://skillcrafttech.com/register" class="applyButton">Apply</a>
+                    </div>
+                    <div class="internshipCards flex-column">
+                        <h1>Digital Marketing</h1>
+                        <ul>
+                            <li>Influencer Marketing</li>
+                            <li>Brand Persona</li>
+                            <li>Competitor Analysis</li>
+                            <li>Content Calendar</li>
+                        </ul>
+                        <a href="https://skillcrafttech.com/register" class="applyButton">Apply</a>
+                    </div>
                 </div>
+            </div>
+            <div id=internshipFeatures" class="flex-row sections">
+                <h1 class="sectionTitle">Internship Features</h1>
             </div>
         </main>
     </body>
