--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <video src="https://www.pexels.com/download/video/9145177/" autoplay muted loop></video>
         <header class="flex-row">
             <div class="flex-row">
-                <a href="">Home</a>
-                <a href="">Apply</a>
-                <a href="">About Us</a>
+                <a href="#hero">Home</a>
+                <a href="#internships">Apply</a>
+                <a href="#faqs">FAQs</a>
                 <a href="">Contact</a>
             </div>
         </header>
@@ -140,8 +140,38 @@
                     </div>
                 </div>
             </div>
-            <div id=internshipFeatures" class="flex-row sections">
-                <h1 class="sectionTitle">Internship Features</h1>
+            <div id="faqs" class="flex-column sections">
+                <h1 class="sectionTitle">Frequently Asked Questions</h1>
+                <div id="questions" class="flex-column">
+                    <div class="question flex-column">
+                        <h1>What is the duration of Internship?</h1>
+                        <p>All our internships are for a period of 1 month only.</p>
+                    </div>
+                    <div class="question flex-column">
+                        <h1>Can I complete multiple tracks together?</h1>
+                        <p>
+                            To ensure a genuine learning experience, we've tailored our internship program to offer just one track per month for each student. This focused approach
+                            allows students to delve deep into their chosen track, facilitating thorough exploration and yielding high-quality outcomes.
+                        </p>
+                    </div>
+                    <div class="question flex-column">
+                        <h1>When does the internships starts?</h1>
+                        <p>Each batch starts at the start or mid of the month and ends on start or mid of next month respectively.</p>
+                    </div>
+                    <div class="question flex-column">
+                        <h1>Is the internship Offline or Online?</h1>
+                        <p>All our internships are conducted entirely in a virtual mode, providing participants with online access to materials and tasks.</p>
+                    </div>
+                    <div class="question flex-column">
+                        <h1>When will I receive the Offer Letter?</h1>
+                        <p>
+                            We process offer letters in batches, typically at the middle and end of each month. During this time, we kindly request your patience as we work to
+                            finalize the documents. If you've already received the task submission email, we recommend checking your spam folder for the offer letter. In case
+                            you're unable to locate it, please reach out to us via email for assistance. We're here to ensure a smooth communication process and address any
+                            concerns you may have.
+                        </p>
+                    </div>
+                </div>
             </div>
         </main>
     </body>
