--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#hero">Home</a>
                 <a href="#internships">Apply</a>
                 <a href="#faqs">FAQs</a>
-                <a href="">Contact</a>
+                <a href="#contactUs">Contact</a>
             </div>
         </header>
         <main class="flex-column">
@@ -30,7 +30,7 @@
                     and builders of tomorrow. Through our comprehensive suite of services, we empower students to hone their skills, secure valuable internships, and embark on
                     fulfilling career journeys.
                 </p>
-                <button>Apply</button>
+                <button id="mainApplyButton">Apply</button>
             </div>
             <div id="chooseUs" class="flex-row sections">
                 <div id="collage" class="flex-row">
@@ -173,6 +173,23 @@
                     </div>
                 </div>
             </div>
+            <div id="contactUs" class="flex-column sections">
+                <h1 class="sectionTitle">Contact Us</h1>
+                <p>For any queries, please email us at <a href="mailto:contact@skillcrafttech.com">contact@skillcarfttech.com</a></p>
+            </div>
         </main>
+        <footer class="flex-column">
+            <div id="footerBox" class="flex-row">
+                <div class="flex-row">
+                    <a href="#">Terms and Conditions/a>
+                    <a href="#">Return Policy</a>
+                    <a href="#">Back to top</a>
+                </div>
+                <div class="flex-row">
+                    <p>© 2025 SkillCraft Technology. All rights reserved</p>
+                </div>
+            </div>
+        </footer>
+        <script src="script.js"></script>
     </body>
 </html>
