--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <footer class="flex-column">
             <div id="footerBox" class="flex-row">
                 <div class="flex-row">
-                    <a href="#">Terms and Conditions/a>
+                    <a href="#">Terms and Conditions</a>
                     <a href="#">Return Policy</a>
                     <a href="#">Back to top</a>
                 </div>
