--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </header>
         <main class="flex-column">
-            <div id="hero" class="sections">
+            <div id="hero" class="sections flex-column">
                 <h1>Crafting Success<br />through SkillCraft Technology</h1>
                 <p>
                     At SkillCraft Technology, we believe in the power of skills to shape futures. We are not just a company; we are craftsmen of talent, architects of opportunity,
