--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </div>
             <div id="contactUs" class="flex-column sections">
                 <h1 class="sectionTitle">Contact Us</h1>
-                <p>For any queries, please email us at <a href="mailto:contact@skillcrafttech.com">contact@skillcarfttech.com</a></p>
+                <p>For any queries, please email us at <a href="mailto:contact@skillcrafttech.com">contact@skillcrafttech.com</a></p>
             </div>
         </main>
         <footer class="flex-column">
