--- a/index.html
+++ b/index.html
@@ -15,37 +15,37 @@
     <body class="flex-column">
         <video src="https://www.pexels.com/download/video/9145177/" autoplay muted loop></video>
         <header class="flex-row">
-            <div class="flex-row">
+            <nav class="flex-row">
                 <a href="#hero">Home</a>
                 <a href="#internships">Apply</a>
                 <a href="#faqs">FAQs</a>
                 <a href="#contactUs">Contact</a>
-            </div>
+            </nav>
         </header>
         <main class="flex-column">
-            <div id="hero" class="sections flex-column">
+            <section id="hero" class="sections flex-column">
                 <h1>Crafting Success<br />through SkillCraft Technology</h1>
                 <p>
                     At SkillCraft Technology, we believe in the power of skills to shape futures. We are not just a company; we are craftsmen of talent, architects of opportunity,
                     and builders of tomorrow. Through our comprehensive suite of services, we empower students to hone their skills, secure valuable internships, and embark on
                     fulfilling career journeys.
                 </p>
-                <button id="mainApplyButton">Apply</button>
-            </div>
-            <div id="chooseUs" class="flex-row sections">
+                <button aria-label="Apply for Internship" id="mainApplyButton">Apply</button>
+            </section>
+            <section id="chooseUs" class="flex-row sections">
                 <div id="collage" class="flex-row">
-                    <img src="https://images.pexels.com/photos/4144230/pexels-photo-4144230.jpeg" alt="image1" id="bigImage" />
+                    <img loading="lazy" src="https://images.pexels.com/photos/4144230/pexels-photo-4144230.jpeg" alt="image1" id="bigImage" />
                     <div class="flex-column">
-                        <img src="https://images.pexels.com/photos/1181244/pexels-photo-1181244.jpeg" alt="image2" id="smallImage1" />
-                        <img src="https://images.pexels.com/photos/4145355/pexels-photo-4145355.jpeg" alt="image3" id="smallImage2" />
+                        <img loading="lazy" src="https://images.pexels.com/photos/1181244/pexels-photo-1181244.jpeg" alt="image2" id="smallImage1" />
+                        <img loading="lazy" src="https://images.pexels.com/photos/4145355/pexels-photo-4145355.jpeg" alt="image3" id="smallImage2" />
                     </div>
                 </div>
                 <div class="flex-column" id="chooseUsTextArea">
                     <h1 class="sectionTitle">Why Choose Us?</h1>
                     <h2>We provide industry designed internship programs</h2>
                 </div>
-            </div>
-            <div id="internships" class="flex-column sections">
+            </section>
+            <section id="internships" class="flex-column sections">
                 <h1 class="sectionTitle">What we offer</h1>
                 <div id="internshipCardsHolder" class="flex-row">
                     <div class="internshipCards flex-column">
@@ -101,7 +101,7 @@
                     <div class="internshipCards flex-column">
                         <h1>Cyber Security</h1>
                         <ul>
-                            <li>Encyption</li>
+                            <li>Encryption</li>
                             <li>Obfuscation</li>
                             <li>Logging</li>
                             <li>Security Analysis</li>
@@ -121,7 +121,7 @@
                     <div class="internshipCards flex-column">
                         <h1>UI/UX</h1>
                         <ul>
-                            <li>Modern Homepagen</li>
+                            <li>Modern Homepage</li>
                             <li>Dark Mode</li>
                             <li>Checkout Flow</li>
                             <li>User Journey Map</li>
@@ -139,8 +139,8 @@
                         <a href="https://skillcrafttech.com/register" class="applyButton">Apply</a>
                     </div>
                 </div>
-            </div>
-            <div id="faqs" class="flex-column sections">
+            </section>
+            <section id="faqs" class="flex-column sections">
                 <h1 class="sectionTitle">Frequently Asked Questions</h1>
                 <div id="questions" class="flex-column">
                     <div class="question flex-column">
@@ -155,7 +155,7 @@
                         </p>
                     </div>
                     <div class="question flex-column">
-                        <h1>When does the internships starts?</h1>
+                        <h1>When does the internship begin?</h1>
                         <p>Each batch starts at the start or mid of the month and ends on start or mid of next month respectively.</p>
                     </div>
                     <div class="question flex-column">
@@ -172,11 +172,11 @@
                         </p>
                     </div>
                 </div>
-            </div>
-            <div id="contactUs" class="flex-column sections">
+            </section>
+            <section id="contactUs" class="flex-column sections">
                 <h1 class="sectionTitle">Contact Us</h1>
                 <p>For any queries, please email us at <a href="mailto:contact@skillcrafttech.com">contact@skillcrafttech.com</a></p>
-            </div>
+            </section>
         </main>
         <footer class="flex-column">
             <div id="footerBox" class="flex-row">
