--- a/index.html
+++ b/index.html
@@ -190,6 +190,10 @@
                 </div>
             </div>
         </footer>
-        <script src="script.js"></script>
+        <script>
+            document.querySelector("#mainApplyButton").addEventListener("click", () => {
+                window.location = "https://skillcrafttech.com/register";
+            });
+        </script>
     </body>
 </html>
